--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -45,6 +45,7 @@ COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/prisma ./prisma
+COPY --from=builder /app/prisma.config.ts ./prisma.config.ts
 
 # Create non-root user for security
 RUN addgroup --system --gid 1001 nodejs && \
