--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,3 @@
-
 services:
   postgres:
     image: postgres:16-alpine
@@ -37,7 +36,8 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
-#      - /app/dist
+      - ${UPLOAD_DIR}:/app/uploads
+  #      - /app/dist
 
   frontend:
     build:
